# set10108

labs/lab01/cps_lab01/: CMakeLists.txt
labs/lab01/cps_lab01/cps_lab01/: CMakeLists.txt  cps_lab01.cpp  cps_lab01.h  data.csv  montecarlo 10.csv  montecarlo 100.csv  montecarlo.csv
labs/lab02/cps_lab02/cps_lab02/: CMakeLists.txt
labs/lab02/cps_lab02/cps_lab02/cps_lab02/: CMakeLists.txt  cps_lab02.cpp  cps_lab02.h
labs/lab05/my work/lab05/: CMakeLists.txt
labs/lab05/my work/lab05/lab05/: CMakeLists.txt  hello-mpi.cpp  monte-carlo-pi.cpp  mpi1.h  normalize.cpp  send-receive.cpp
labs/lab08/MyLab08/: CMakeLists.txt
labs/lab08/MyLab08/MyLab08/: CMakeLists.txt  hello.cu
